# Next_FastAPI_Template

Blackack/: .gitignore
upstart-interview-boilerplate-next/server/: .pre-commit-config.yaml  alembic.ini  app.db  main.py  pyproject.toml  pytest.ini  redis.py  requirements.txt
upstart-interview-boilerplate-next/server/crud/: form.py  poll.py
upstart-interview-boilerplate-next/server/db/: db.py
upstart-interview-boilerplate-next/server/middleware/: logging.py
upstart-interview-boilerplate-next/server/migrations/: env.py
upstart-interview-boilerplate-next/server/migrations/versions/: 81124fc34ae5_add_liked_column.py
upstart-interview-boilerplate-next/server/practice/: top_k_frequent.py
upstart-interview-boilerplate-next/server/routers/: forms.py  url_shortener.py
upstart-interview-boilerplate-next/server/schemas/: form.py  poll.py
upstart-interview-boilerplate-next/server/src/url_shortener/crud/: form.py  url_shortener.py
upstart-interview-boilerplate-next/server/src/url_shortener/db/: utils.py
upstart-interview-boilerplate-next/server/src/url_shortener/middleware/: auth.py  logging.py
upstart-interview-boilerplate-next/server/src/url_shortener/models/: models.py  url_shortener.py
upstart-interview-boilerplate-next/server/src/url_shortener/practice/: lru_cache.py
upstart-interview-boilerplate-next/server/src/url_shortener/routers/: polls.py
upstart-interview-boilerplate-next/server/tests/integration/: app.db  test_shortener_api.py
upstart-interview-boilerplate-next/server/tests/unit/: test_shortener_service.py
(+23 files in other folders)
